Fixed for mobile alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,5 +10,6 @@
 		max-width: 960px;
 		display: grid;
 		margin: 0 auto;
+		padding: 0 $margin * 2;
 	}
 }
