--- a/src/pages/skills/skills.scss
+++ b/src/pages/skills/skills.scss
@@ -11,7 +11,6 @@
 	.tags {
 		list-style: none;
 		text-align: center;
-		width: 800px;
 		margin: 25px auto;
 		li {
 			display: inline-block;
